Fixing allowarg.